[package]
name = "minotaur"
version = "0.2.1"
authors = ["Jonathan Stites <mail@jonstites.com>"]
description = "A command-line program for generating mazes."
edition = "2018"
readme = "README.md"
documentation = "https://github.com/jonstites/minotaur"
homepage = "https://github.com/jonstites/minotaur"
repository = "https://github.com/jonstites/minotaur"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "jonstites/minotaur", branch = "master" }

[dependencies]
bincode = "1.1.4"
bitflags = "1.1.0"
image = "0.21.2"
rand = "0.7.0"
serde = { version = "1.0.94", features = ["derive"] }
structopt = "0.2.18"
rand_pcg = "0.2.0"
