[package]
name = "minotaur"
version = "0.2.1"
authors = ["Jonathan Stites <mail@jonstites.com>"]
description = "A command-line program for generating mazes."
edition = "2018"
readme = "README.md"
documentation = "https://github.com/jonstites/minotaur"
homepage = "https://github.com/jonstites/minotaur"
repository = "https://github.com/jonstites/minotaur"
license = "MIT OR Apache-2.0"
keywords = ["cli"]
categories = ["command-line-utilities"]

[badges]
travis-ci = { repository = "jonstites/minotaur", branch = "master" }

[dependencies]
bincode = "1"
bitflags = { version = "2", features = ["serde"] }
# image = "0.25"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
rand_pcg = "0.3"
